# dejavu-cxl

./: .gitignore  CMakeLists.txt  debug_qwen235b.sh  run_qwen235b_moe_ft.sh  run_with_gdb.sh  test_nf4_loading.py  test_nf4_quantization.py  test_simple.py  test_weight_loading_only.py
docs/: moe_token_ft_guide.md  qwen235b_moe_ft_endtoend.md
examples/: moe_ft_integration_example.cpp  qwen235b_moe_ft_config.py
examples/cpp/bert/: bert_triton_example.cc
examples/cpp/gptj/: gptj_triton_example.cc
examples/cpp/gptneox/: gptneox_triton_example.cc
examples/cpp/multi_gpu_gpt/: multi_gpu_gpt_triton_example.cc
examples/pytorch/gpt/: gpt_batch_maker.py  multi_gpu_gpt_example.py  run_qwen235b_moe_ft.py
scripts/: create_two_mig.sh
src/fastertransformer/kernels/: CMakeLists.txt  decoder_masked_multihead_attention.h  decoder_masked_multihead_attention_utils.h  layernorm_kernels.h  longformer_kernels.cu  moe_kernels.cu  moe_kernels.h  nf4_dequant_kernels.cu  nf4_dequant_kernels.h  stop_criteria_kernels.cu  unfused_attention_kernels.cu  unfused_attention_kernels.h
src/fastertransformer/layers/: DynamicDecodeLayer.cc  DynamicDecodeLayer.h  FfnLayer.cc  FfnLayer.h  TensorParallelSiluFfnLayer.cc  TensorParallelSiluFfnLayer.h
src/fastertransformer/tf_op/: BaseOp.h
src/fastertransformer/th_op/: CMakeLists.txt  WindowAttentionINT8Stub.cc  force_cublas_wrapper_inst.cc  force_pgcd_inst.cc  th_utils.cu  th_utils.h
src/fastertransformer/th_op/bart/: BartDecoderOp.h  BartDecodingOp.h  BartEncoderOp.h
src/fastertransformer/th_op/bert/: BertINT8Op.h  BertOp.h
src/fastertransformer/th_op/common/: DynamicDecodeOp.cc
src/fastertransformer/th_op/deberta/: DebertaOp.h
src/fastertransformer/th_op/decoder/: DecoderOp.h
src/fastertransformer/th_op/decoding/: DecodingOp.h
src/fastertransformer/th_op/encoder/: EncoderOp.h
src/fastertransformer/th_op/gpt/: GptOp.h
src/fastertransformer/th_op/gpt_fp8/: GptFp8Op.h
src/fastertransformer/th_op/gptneox/: GptNeoXOp.h
src/fastertransformer/th_op/longformer/: LongformerEncoderOp.cc
src/fastertransformer/th_op/multi_gpu_gpt/: CMakeLists.txt  ParallelGptContextDecoderOp.cc  ParallelGptContextDecoderOp.h  ParallelGptDecoderOp.cc  ParallelGptDecoderOp.h  ParallelGptOp.cc  ParallelGptOp.h
src/fastertransformer/th_op/swin/: SwinINT8Op.h  SwinOp.h
src/fastertransformer/th_op/t5/: T5DecoderOp.h  T5DecodingOp.cc  T5EncoderOp.cc
src/fastertransformer/th_op/vit/: ViTINT8Op.h  ViTOp.h
src/fastertransformer/triton_backend/: transformer_triton_backend.cpp  triton_utils.hpp
src/fastertransformer/utils/: CMakeLists.txt  cache_utils.cc  cache_utils.h  cublasAlgoMap.cc  cublasMMWrapper.cc  cuda_utils.h  moe_delta_checkpoint.cc  moe_delta_checkpoint.h  moe_token_ft_manager.cc  moe_token_ft_manager.h  mpi_utils.cc  nccl_utils.cc  nccl_utils.h  nf4_weight_loader.cc  nf4_weight_loader.h  nvtx_utils.h
tests/: test_moe_token_ft.cc
tests/int8_gemm/: int8_gemm_test.cu
(+67 files in other folders)
